// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`path calculate path area 1`] = `
Object {
  "maxLatitude": 45.55014,
  "maxLongitude": 6.30281,
  "minLatitude": 45.06822,
  "minLongitude": 5.77311,
}
`;

exports[`path calculate path elevation 1`] = `
Object {
  "negative": 10733.783100000026,
  "positive": 10774.175100000026,
}
`;

exports[`path calculate path length 1`] = `145736.45926229458`;

exports[`path compute path elevation of path without elevation data 1`] = `
Object {
  "negative": 0,
  "positive": 0,
}
`;

exports[`path create track 1`] = `
Object {
  "findClosestPosition": [Function],
  "getBoundingBox": [Function],
  "getElevation": [Function],
  "getLength": [Function],
  "getPositionIndex": [Function],
  "getPositionsAt": [Function],
  "getPositionsIndicesAt": [Function],
  "getProgressionStatistics": [Function],
  "slice": [Function],
}
`;

exports[`path find closest path position of Paris 1`] = `
Array [
  6.26363,
  45.53978,
  996.271,
]
`;

exports[`path get partial progression statistics 1`] = `
Array [
  104.64472727445164,
  0,
  0,
]
`;

exports[`path get position at 10km mark 1`] = `1`;

exports[`path get position at 10km mark 2`] = `
Array [
  5.82955,
  45.08631,
  1380.492,
]
`;

exports[`path get position index for a given position 1`] = `5546`;

exports[`path get progression statistics 1`] = `5546`;

exports[`path get progression statistics 2`] = `
Array [
  145579.63929501126,
  12588.613999999976,
  12548.222000000007,
]
`;

exports[`path get section between 10km and 40 km marks 1`] = `1086`;

exports[`path unable to get progression statistics 1`] = `
Array [
  0,
  0,
  0,
]
`;

exports[`path unable to get section 1`] = `Array []`;

exports[`path unable to get section 2 1`] = `Array []`;
